--- a/Server/package.json
+++ b/Server/package.json
@@ -22,10 +22,12 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.11.5",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
     "uuid": "^11.0.3",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
