--- a/Client/package.json
+++ b/Client/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.0",
     "tailwindcss": "^3.4.17",
+    "toastify": "^2.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
