--- a/Client/package.json
+++ b/Client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.17",
     "toastify": "^2.0.1",
     "xlsx": "^0.18.5"
