--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.9.2",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
